--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/white</item>
         <item name="android:orientation">vertical</item>
+        <item name="android:windowBackground">@color/black</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.ProfNotes_v1">
