--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -97,7 +97,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="60dp"
+            >
 
             <TextView
                 android:id="@+id/tvRecoverPassword"
@@ -109,8 +111,6 @@
 
             <Button
                 android:id="@+id/btnLogin"
-                style="@style/TextH1"
-                android:background="@drawable/bg_button"
                 android:textAllCaps="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -118,8 +118,12 @@
                 android:padding="12dp"
                 android:enabled="true"
                 android:text="@string/btnLogin"
+                style="@style/TextH1"
                 android:gravity="center_horizontal|center_vertical"
-                android:textColor="@color/black" />
+                android:backgroundTint="@color/yellow"
+                android:textColor="@color/black"
+
+                />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
