--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/page_margin"
-    android:fitsSystemWindows="true"
     android:fillViewport="true"
+    android:fitsSystemWindows="true"
     tools:context=".ui.login.ui.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,11 +30,11 @@
             android:id="@+id/containerLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 style="@style/TextH1.Large"
@@ -97,8 +97,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            >
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:id="@+id/tvRecoverPassword"
@@ -110,19 +109,17 @@
 
             <Button
                 android:id="@+id/btnLogin"
-                android:textAllCaps="true"
+                style="@style/TextH1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:padding="12dp"
-                android:enabled="true"
-                android:text="@string/btnLogin"
-                style="@style/TextH1"
+                android:background="@drawable/bg_button"
+                android:enabled="false"
                 android:gravity="center_horizontal|center_vertical"
-                android:backgroundTint="@color/yellow"
-                android:textColor="@color/black"
-
-                />
+                android:padding="12dp"
+                android:text="@string/btnLogin"
+                android:textAllCaps="true"
+                android:textColor="@color/black" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
