--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -114,7 +114,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/bg_button"
-                android:enabled="false"
+                app:backgroundTint="@null"
+                android:enabled="true"
                 android:gravity="center_horizontal|center_vertical"
                 android:padding="12dp"
                 android:text="@string/btnLogin"
