Сверстан экран добавления новой заметки, экран регистрации

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -40,15 +40,31 @@
                 style="@style/TextH1.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/login" />
+                android:text="@string/registration" />
 
             <TextView
                 style="@style/TextH5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/hintLogin"
+                android:text="@string/hint_registration"
                 android:textColor="@color/gray" />
+
+            <EditText
+                android:id="@+id/etName"
+                style="@style/TextH3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:autofillHints="username"
+                android:background="@drawable/bg_login_edit_text"
+                android:hint="@string/hint_name"
+                android:inputType="text"
+                android:padding="12dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/gray"
+                android:textCursorDrawable="@drawable/edit_text_cursor"
+                tools:ignore="TextFields" />
 
             <EditText
                 android:id="@+id/etEmailOrPhone"
@@ -80,14 +96,6 @@
                 android:textColor="@color/gray"
                 android:textColorHint="@color/gray" />
 
-            <TextView
-                android:id="@+id/tvLoginWithoutAuth"
-                style="@style/TextH5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="@string/loginWithoutAccount"
-                android:textColor="@color/gray" />
 
         </LinearLayout>
 
@@ -100,13 +108,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/tvRecoverPassword"
-                style="@style/TextH5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/hintForgotPassword"
-                android:textColor="@color/gray" />
 
             <Button
                 android:id="@+id/btnLogin"
@@ -118,7 +119,7 @@
                 android:enabled="true"
                 android:gravity="center_horizontal|center_vertical"
                 android:padding="12dp"
-                android:text="@string/btnLogin"
+                android:text="@string/btn_registration"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 app:backgroundTint="@null" />
@@ -129,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/CreateAccount"
+                android:text="@string/enter_user_account"
                 android:gravity="center_horizontal"
                 android:textColor="@color/gray" />
         </LinearLayout>
