--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/CoordinatorLayoutActionButton"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/page_margin"
+    android:layout_marginRight="@dimen/page_margin"
+    tools:context=".ui.addNote.addNewNoteFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -153,7 +157,7 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/friends_circle"
                     android:textColor="@color/white"
-                    app:drawableEnd="@drawable/ic_search_gray"
+                    android:drawableEnd="@drawable/ic_search_gray"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
@@ -198,28 +202,20 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/CoordinatorLayoutActionButton"
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/extended_fab"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/page_margin"
-        android:layout_marginRight="@dimen/page_margin"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_btn_new_note"
+        android:fontFamily="@font/circe_extra_bold"
+        android:text="@string/create_new_note"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="@null" />
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/extended_fab"
-            android:textStyle="bold"
-            android:fontFamily="@font/circe_extra_bold"
-            android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_btn_new_note"
-            android:text="@string/create_new_note"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            app:backgroundTint="@null"
-            app:layout_anchorGravity="bottom|right|end" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
