--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -177,8 +177,7 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/CoordinatorLayoutBottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
