--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -141,6 +141,7 @@
             android:layout_width="match_parent"
             android:layout_height="136dp"
             android:layout_marginTop="12dp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@+id/tvNewNotesLabel"
             app:layout_constraintStart_toStartOf="@+id/tvNewNotesLabel"
             app:layout_constraintTop_toBottomOf="@+id/tvNewNotesLabel" />
@@ -183,7 +184,7 @@
             android:id="@+id/CoordinatorLayoutBottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteX="-57dp"
             tools:layout_editor_absoluteY="0dp">
 
             <com.google.android.material.bottomappbar.BottomAppBar
